# gemma4-npc-it

./: .env.example  .gitignore  DATASET_CARD.md  MODEL_CARD.md  Makefile  README.md  auto_pipeline.py  pyproject.toml  requirements-dev.txt  requirements-mlx.txt  requirements.txt  test_env.exp  test_ssh.exp  test_torch.exp
configs/: dpo_config.yaml  inference_defaults.yaml  training_base.yaml  training_filtered.yaml  training_npc_it.yaml
data/augment/: augment_quest_dataset.py  fix_alternation.py
data/combine/: combine_datasets.py
data/dpo/: generate_preference_pairs.py  generate_sota_dpo.py  preference_schema.md
data/generate_npc_dialogue/: 01_generate_system_prompts.py  (+4 more)
docs/: DATASET_DESIGN.md  EVALUATION.md  INFERENCE_GUIDE.md  Q_SART_WHITEPAPER.md
evaluation/: bleu_rouge_eval.py  character_consistency_eval.py  inference_speed_benchmark.py  llm_as_judge_eval.py  q_sart_benchmark.py  response_length_analysis.py  roleplay_eval.py
finetuning/: Gemma4NPC_Base.ipynb  Gemma4NPC_DPO.ipynb  Gemma4NPC_Filtered.ipynb  Gemma4NPC_IT.ipynb  hparam_safety_sweep.py  modal_dpo.py  modal_push_to_hf.py  modal_train.py  train.py  train_dpo.py  upload_cards.py
inference/: batch_inference.py  llama_cpp_inference.py  mlx_inference.py  ollama_integration.md  streaming_inference.py  structured_inference.py  transformers_inference.py  vllm_inference.py
quantization/: export_qat.py  export_to_awq.py  export_to_gguf.py  modal_quantize.py  run_gguf_my_repo.md
serving/: openai_compatible_wrapper.py
web_ui/: index.html  remove_black.py  remove_green.py  remove_magenta.py
(+28 files in other folders)
