# SPDX-License-Identifier: Apache-2.0

[project]
name = "gemma4npc"
version = "1.0.0"
description = "SOTA NPC roleplay fine-tuning on Gemma 4 12B — production-grade character AI for game developers"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "chimbiwide"},
]
readme = "README.md"
keywords = ["gemma", "npc", "roleplay", "fine-tuning", "llm", "game-ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Games/Entertainment",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line length handled by black

[tool.ruff.isort]
known-first-party = ["gemma4npc"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
